--- a/client/index.html
+++ b/client/index.html
@@ -12,21 +12,18 @@
     <title>Mini WordPress</title>
     <style>
     .list-group-item.active {
-        background-color:#F8F3DF;
-        border-color :#F8F3DF
+        background-color:#F2F1EC;
+        border-color :#F2F1EC
     }
     .list-group-item{
         border: none;
         border-color: black
     }
     #header {
-        background: #F8F3DF;
-        -webkit-box-shadow: 1px 3px 3px -2px rgba(0,0,0,1);
-        -moz-box-shadow: 1px 3px 3px -2px rgba(0,0,0,1);
-        box-shadow: 1px 3px 3px -2px rgba(0,0,0,1);
+        background: #F2F1EC;
     }
     footer {
-        background-color: #F8F3DF;
+        background-color: #F2F1EC;
     }
     </style>    
 </head>
@@ -36,7 +33,7 @@
             <div class="row" id="header">
                 <div class="col-md-2">
                     <div class="row d-flex align-items-end">
-                        <div class="col-md-4 ">
+                        <div class="col-md-4">
                             <a class="navbar-brand" href="#">
                                 <img src="https://static.thenounproject.com/png/206734-200.png" width="50" height="50" alt="">
                             </a>
@@ -53,15 +50,33 @@
             <div class="row mt-3">
                 <div class="col-md-2" id="navbar">
                     <div class="list-group" id="list-tab" role="tablist">
-                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="home">Home</a>
-                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Article</a>
-                        <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                        <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+                        <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile"> <i class="far fa-newspaper"></i> Article</a>
                     </div>
                 </div>
-                <div class="col-md-10" id="mainContent" style="overflow:scroll; max-height: 70vh ;" >
-                    <div class="row">
-                        <div class="col-md-3 mb-3" v-for="article in articles" :key="article.title">
+                <div class="col-md-10" id="mainContent"  >
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <h1 class="text-center">Search Article</h1>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Article Title.." id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn btn-dark" type="button" id="search-button">Search</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row mt-4">
+                        <div class="col-md-12" v-for="article in articles" :key="article.title">
+                            <div class="card mb-3">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ article.title }}</h5>
+                                    <p class="card-text">{{ article.description }}</p>
+                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="col-md-3 mb-3" v-for="article in articles" :key="article.title">
                             <div class="card" style="width: 18rem; max-height: 20rem;" > 
                                 <img class="card-img-top" style="max-height: 10rem; overflow: hidden;" v-bind:src="article.image" >
                                 <div class="card-body">
@@ -70,7 +85,7 @@
                                     <a href="#"  data-toggle="modal" data-target="#exampleModal">See detail</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>    
             </div>
@@ -94,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <footer class="fixed-bottom">
+            <footer>
                 <h3 class="text-center">Footer</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime numquam reprehenderit odio. Harum earum iusto dicta recusandae exercitationem commodi cumque tempore! Ipsum ratione tenetur dolorum cum. Quibusdam dignissimos aliquam nostrum.</p>
             </footer>
