add, update, image upload, tags, rich text editor

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,181 +10,38 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/tagsinput.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote-bs4.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/vueWysiwyg.css">
+    <link rel="stylesheet" href="css/imageUpload.css">
     <link rel="stylesheet" href="css/main.css">
     <title>New MiniWP (Mini Wordpress)</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark main-bg-color">
-        <a class="navbar-brand brand" href="/">
-            <i class="fab fa-wordpress" style="width: 35px; font-size: 1.2em;"></i>
-            MiniWP</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Explore</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="sidebarCollapse" href="#">Sidebar</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0 mr-2">
-                <li class="nav-item">
-                    <a class="btn btn-light" style="min-width" href="#">
-                        <i class="fas fa-edit mr-2"></i>Write
-                    </a>
-                </li>
-            </ul>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <div class='has-search'>
-                    <span class="fa fa-search form-control-feedback"></span>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                </div>
-            </form>
-            <button class="btn btn-warning my-2 my-sm-0" type="submit">Logout</button>
-        </div>
-    </nav>
-    <div class="wrapper">
-        <!-- Sidebar -->
-        <nav id="sidebar">
-            <ul class="list-unstyled components">
-                <div class="container d-flex flex-column mb-3">
-                    <div class="row justify-content-center">
-                        <img alt="Profile Pic" class="avatar" src="img/user.png">
-                    </div>
-                    <div class="row justify-content-center mt-2">
-                        <span>Andre</span>
-                    </div>
-                </div>
-                <li>
-                    <a href="#">New Post</a>
-                </li>
-                <li>
-                    <a href="#">Posts</a>
-                </li>
-                <li>
-                    <a href="#">Explore</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- Page Content -->
-        <div id="content">
-            <div class="container">
-                <!-- Category Selection Nav -->
-                <div class="row">
-                    <nav class="navbar">
-                        <a href="#" id="cat-publish" class="category-item active">PUBLISHED</a>
-                        <a href="#" id="cat-draft" class="category-item">DRAFT</a>
-                    </nav>
-                </div>
+    <div id="miniWP">
+        <!-- top navbar -->
+        <navigation></navigation>
+        
+        <!-- wrapper for sidebar & content -->
+        <div class="wrapper">
+            <!-- control sidebar -->
+            <sidebar></sidebar>
 
-                <!-- New Post Form -->
-                <div class="row mt-4">
-                    <form class="needs-validation w-100" novalidate>
-                            <div class="form-group">
-                                <label for="title">Title</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" id="title" placeholder="Title" aria-describedby="title" required>
-                                    <div class="invalid-feedback">
-                                        Please set any title
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="post-content">Content</label>
-                                <!-- <textarea class="form-control" id="post-content" rows="3"></textarea> -->
-                                <textarea id="summernote" name="editordata"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label for="tags">Tags</label>
-                                <input type="text" value="Amsterdam,Washington,Sydney,Beijing,Cairo" data-role="tagsinput"  class="form-control" id="tags" aria-describedby="tags">
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-success" type="submit">Submit</button>
-                            </div>
-                    </form>
+            <!-- Actual Content -->
+            <div id="content">
+                <div id="index" class="container">
+                    <index></index>
                 </div>
-
-                <!-- Posts List -->
-                <div class="row mt-4">
-                    <div class="list-group post-list">
-                        <a href="#" class="list-group-item list-group-item-action flex-row post-list-item">
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small>3 days ago</small>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p>
-                                <small>Donec id elit non mi porta.</small>
-                            </div>
-                            <div class="ml-3"><img style="width: 150px; height:100%;" src="img/user.png"></div>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action flex-row post-list-item">
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small>3 days ago</small>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p>
-                                <small>Donec id elit non mi porta.</small>
-                            </div>
-                            <div class="ml-3"><img style="width: 150px; height:100%;" src="img/user.png"></div>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action flex-row post-list-item">
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small>3 days ago</small>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p>
-                                <small>Donec id elit non mi porta.</small>
-                            </div>
-                            <div class="ml-3"><img style="width: 150px; height:100%;" src="img/user.png"></div>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action flex-row post-list-item">
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small>3 days ago</small>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p>
-                                <small>Donec id elit non mi porta.</small>
-                            </div>
-                            <div class="ml-3"><img style="width: 150px; height:100%;" src="img/user.png"></div>
-                        </a>
-                        <a href="#" class="list-group-item list-group-item-action flex-row post-list-item">
-                            <div class="d-flex flex-column justify-content-between">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small>3 days ago</small>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p>
-                                <small>Donec id elit non mi porta.</small>
-                            </div>
-                            <div class="ml-3"><img style="width: 150px; height:100%;" src="img/user.png"></div>
-                        </a>
-                    </div>
+                <div id="createPost" class="container">
+                    <create-post></create-post>
+                </div>
+                <div id="updatePost" class="container">
+                    <update-post></update-post>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Script section -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -192,8 +50,22 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote-bs4.js"></script>
-    <script src="js/tagsinput.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="https://unpkg.com/@johmun/vue-tags-input/dist/vue-tags-input.js"></script>
+
+    <!-- local JS -->
+    <script src="js/helpers/moment.js"></script>
+    <script src="js/components/vueWysiwyg.js"></script>
+    <script src="js/components/postform.js"></script>
+    <script src="js/components/postitemcard.js"></script>
+    <script src="js/components/postlist.js"></script>
+    <script src="js/components/navigation.js"></script>
+    <script src="js/components/sidebar.js"></script>
+    <script src="js/components/imageUpload.js"></script>
+    <script src="js/views/updatePost.js"></script>
+    <script src="js/views/createPost.js"></script>
+    <script src="js/views/index.js"></script>
     <script src="js/main.js"></script>
 </body>
 
