post detail init

--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="https://unpkg.com/@johmun/vue-tags-input/dist/vue-tags-input.js"></script>
 
-    <!-- local JS -->
+    <!-- local JS Components-->
     <script src="js/helpers/moment.js"></script>
     <script src="js/components/vueWysiwyg.js"></script>
     <script src="js/components/postform.js"></script>
@@ -63,6 +63,9 @@
     <script src="js/components/navigation.js"></script>
     <script src="js/components/sidebar.js"></script>
     <script src="js/components/imageUpload.js"></script>
+
+    <!-- Views -->
+    <script src="js/views/detailPost.js"></script>
     <script src="js/views/updatePost.js"></script>
     <script src="js/views/createPost.js"></script>
     <script src="js/views/index.js"></script>
