--- a/client/index.html
+++ b/client/index.html
@@ -5,177 +5,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
         crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
     <title>Mini Wp</title>
-    <script src="https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js"></script>
+    <!-- axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+    <!-- moment  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+    <!-- ck editor -->
+    <script src="../node_modules/@ckeditor/ckeditor5-build-classic/build/ckeditor.js"></script>
+    <script src="../node_modules/@ckeditor/ckeditor5-vue/dist/ckeditor.js"></script>
 </head>
 
 <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #14213D ">
-        <a class="navbar-brand" href="#" style="color:#FCA311"><i class="fab fa-wordpress" style="font-size: 30px"></i></a>
+    <div class="contrainer" id="app">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #14213D ">
+            <a class="navbar-brand" href="#" style="color:#FCA311"><i class="fab fa-wordpress" style="font-size: 30px"></i></a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="color:white"><i class="far fa-newspaper" style="font-size: 20px"></i>
+                            Mini.</a>
+                    </li>
+                </ul>
+                <b-button class="btn btn-secondary mx-2" type="button" v-if="!isLogin" @click="login"><i class="fas fa-sign-in-alt"></i> Login</b-button>
+                <b-button v-b-modal.article-form class="btn btn-light mx-2" v-if="isLogin"><i class="fas fa-feather-alt"></i> Write</b-button>
+                <b-button class="btn btn-secondary mx-2" type="button" v-if="isLogin" @click="logout"><i class="fas fa-sign-out-alt"></i> Sign Out</b-button>
+            </div>
+        </nav>
+        <!-- home -->
+        <div class="container-fluid" v-if="isLogin">
+            <div class="row">
+                <div class="col col-md-2 pl-0">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-tv mx-3"></i>View
+                            Site</a>
+                        <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-history mx-3"></i>Activity</a>
+                        <a href="#" class="list-group-item list-group-item-action"><i class="far fa-chart-bar mx-3"></i>Stats</a>
+                    </div>
+                </div>
+                <div class="col col-md-9 pt-3">
+                    <div>
+                        <b-tabs content-class="mt-3">
+                            <b-tab title="Published" active>
+                                <div class="container" style="overflow:scroll; height: 70vh">
+                                    <div v-for="article in articles">
+                                        <b-card :img-src="article.image" img-alt="Card image" img-left class="mb-3"
+                                            :title="article.title" :sub-title="`By ${article.author}`">
+                                            <b-card-text>{{article.shortContent}}</b-card-text>
+                                            <div class='d-flex justify-content-end'>
+                                                <b-button :id="`read-button-${article.id}`" class="mx-2" variant="light"
+                                                    v-b-modal.one-article @click="getOneArticle(article)" style="background-color: #FCA311"><i
+                                                        class="fas fa-book-open" style="font-size:25px"></i></b-button>
+                                                <b-popover :target="`read-button-${article.id}`" placement="bottomleft"
+                                                    triggers="hover" :content="`Read ${article.title}`"></b-popover>
+                                                <b-button :id="`delete-button-${article.id}`" class="mx-2" variant="danger"><i
+                                                        class="fas fa-trash-alt" style="font-size:20px"></i></b-button>
+                                                <b-popover :target="`delete-button-${article.id}`" placement="bottomleft"
+                                                    triggers="hover" :content="`Delete ${article.title}`"></b-popover>
+                                                <b-button :id="`edit-button-${article.id}`" class="mx-2" variant="info"><i
+                                                        class="fas fa-pen-fancy" style="font-size:20px"></i></b-button>
+                                                <b-popover :target="`edit-button-${article.id}`" placement="bottomleft"
+                                                    triggers="hover" :content="`Edit ${article.title}`"></b-popover>
+                                            </div>
+                                        </b-card>
+                                    </div>
+                                </div>
+                            </b-tab>
+                            <b-tab title="Drafts">
+                                <p>I'm the second tab</p>
+                            </b-tab>
+                        </b-tabs>
+                    </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" style="color:white"><i class="far fa-newspaper" style="font-size: 20px"></i>
-                        Mini.</a>
-                </li>
-            </ul>
-            <button class="btn btn-light mx-2" type="button"><i class="fas fa-feather-alt"></i> Write</button>
-            <button class="btn btn-secondary mx-2" type="button"><i class="fas fa-sign-out-alt"></i> Sign Out</button>
-        </div>
-    </nav>
-    <!-- home -->
-    <div class="container-fluid pl-0">
-        <div class="row">
-            <div class="col col-md-2 pl-0" style="overflow: scroll; height: 92vh">
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-tv mx-3"></i>View Site</a>
-                    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-history mx-3"></i>Activity</a>
-                    <a href="#" class="list-group-item list-group-item-action"><i class="far fa-chart-bar mx-3"></i>Stats</a>
                 </div>
             </div>
-            <div class="col col-md-10 ">
-                <div class='p-5'>
-                    <nav>
-                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                                role="tab" aria-controls="nav-home" aria-selected="true" style="color: #FCA311">Home</a>
-                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
-                                role="tab" aria-controls="nav-profile" aria-selected="false" style="color: #FCA311">Profile</a>
-                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
-                                role="tab" aria-controls="nav-contact" aria-selected="false" style="color: #FCA311">Contact</a>
-                            <form class="form-inline my-2 my-lg-0 mx-3">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn my-2 my-sm-0" type="submit" style="background-color: #FCA311">Search</button>
-                            </form>
-                        </div>
-                    </nav>
-                    <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active list-group" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
-                            style="overflow:scroll;height: 70vh">
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small class="text-muted">3 days ago</small>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam
-                                        eget risus
-                                        varius blandit.</p>
-                                    <div>
-                                        <button class="btn " style="background-color:#E5E5E5"><i class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger mr-3"><i class="fas fa-trash"></i></button>
-                                    </div>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <small class="text-muted">Donec id elit non mi porta.</small>
-                                </div>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small class="text-muted">3 days ago</small>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam
-                                        eget risus
-                                        varius blandit.</p>
-                                    <div>
-                                        <button class="btn " style="background-color:#E5E5E5"><i class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger mr-3"><i class="fas fa-trash"></i></button>
-                                    </div>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <small class="text-muted">Donec id elit non mi porta.</small>
-                                </div>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small class="text-muted">3 days ago</small>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam
-                                        eget risus
-                                        varius blandit.</p>
-                                    <div>
-                                        <button class="btn " style="background-color:#E5E5E5"><i class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger mr-3"><i class="fas fa-trash"></i></button>
-                                    </div>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <small class="text-muted">Donec id elit non mi porta.</small>
-                                </div>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small class="text-muted">3 days ago</small>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam
-                                        eget risus
-                                        varius blandit.</p>
-                                    <div>
-                                        <button class="btn " style="background-color:#E5E5E5"><i class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger mr-3"><i class="fas fa-trash"></i></button>
-                                    </div>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <small class="text-muted">Donec id elit non mi porta.</small>
-                                </div>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group item heading</h5>
-                                    <small class="text-muted">3 days ago</small>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam
-                                        eget risus
-                                        varius blandit.</p>
-                                    <div>
-                                        <button class="btn " style="background-color:#E5E5E5"><i class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger mr-3"><i class="fas fa-trash"></i></button>
-                                    </div>
-                                </div>
-                                <div class="d-flex w-100 justify-content-between">
-                                    <small class="text-muted">Donec id elit non mi porta.</small>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-                        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+        </div>
+        <!-- article modal -->
+        <b-modal id="one-article" :title="oneArticle.title" no-close-on-backdrop centered>
+            <div style="overflow:scroll; height: 60vh">
+                <div class="card">
+                    <img class="card-img-top" :src="oneArticle.image" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text" v-html="oneArticle.content"></p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <form>
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control" id="title" placeholder="Enter Title">
+            <modal-footer>
+                <div class="d-flex justify-content-end" style="margin-top: 15px">
+                    <small>{{oneArticle.author}}</small>
+                </div>
+            </modal-footer>
+            <div slot="modal-footer">
+                <b-button variant="light" @click="$bvModal.hide('one-article')">OK</b-button>
             </div>
-            <textarea name="content" id="editor">This is some sample content.</textarea>
-            <script>
-                ClassicEditor
-                    .create(document.querySelector('#editor'))
-                    .then(editor => {
-                        console.log(editor);
-                    })
-                    .catch(error => {
-                        console.error(error);
-                    });
-            </script>
-        </form>
-    </div>
-    <div class="container">
+        </b-modal>
+        <!-- article form modal -->
+        <b-modal id="article-form" title="New Article">
+            <form @submit.prevent="createArticle('data')">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input v-model="newArticle.title" type="text" class="form-control" id="title" placeholder="Enter Title">
+                </div>
+                <b-form-file
+                    placeholder="Choose a file..."
+                    drop-placeholder="Drop file here..."
+                    ></b-form-file>
+                    <div class="mt-3"></div>
+                <ckeditor :editor="editor" v-model="newArticle.content" :config="editorConfig"></ckeditor>
+            </form>
+            <div slot="modal-footer">
+                <b-button variant="primary" @click="createArticle('data')">Create!</b-button>
+            </div>
+        </b-modal>
         <div class="card text-center">
             <h3 class="card-header"> Title</h3>
             <div class="card-body">
@@ -188,11 +134,7 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
